# realtimeElectionForecasting

./: .gitignore  README.md  cctp_visuals.ipynb  main.py  model_img.ipynb  parse_election_data.py  pyproject.toml
CCTP_data/: CCPT_2024_General_Election.xlsx  CCTP_preprocessing.ipynb  Milestone2_Figures.ipynb
CCTP_data/Assembly_Districts/: CA_State_Assembly_Districts_and_Membership_2024_to_2026.dbf  CA_State_Assembly_Districts_and_Membership_2024_to_2026.shx
CCTP_data/Congressional_Districts/: Congressional_Districts.dbf  Congressional_Districts.shp.xml  Congressional_Districts.shx
CCTP_data/Senate_Districts/: CA_State_Senate_Districts_and_Membership_2025-2030.dbf  CA_State_Senate_Districts_and_Membership_2025-2030.shx  CA_State_Senate_Districts_and_Membership_2025-2030.xml
model_v1/: 13_races.csv  first_drop.csv  later_drops.csv  model_v1.ipynb  preprocessing.ipynb
models/baseline_model/: baseline_model.ipynb
output/: AD-47.csv  AD-58.csv  AD-74.csv  CD-13.csv  CD-21.csv  CD-22.csv  CD-27.csv  CD-3.csv  CD-40.csv  CD-41.csv  CD-45.csv  CD-47.csv  CD-49.csv  CD-9.csv  SD-19.csv  SD-35.csv  SD-37.csv  SD-5.csv  Statewide Results.csv  combined_races.csv  election_metadata.json
pres_data/: preprocessing.ipynb
